--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ INTRO CONTAINER
     background-attachment: fixed;
 }
  .pricing.background_content{
-    background: url('../images/ourmenu.png') no-repeat center center; 
+    background: url('../images/OurMenu.png') no-repeat center center; 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
